# GigaInt

./: CMakeLists.txt  LICENSE
docs/: README.md
include/GigaInt/: GigaInt.h
tests/: test_gigaint.cpp
